--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,15 +30,27 @@ jobs:
       - name: Run Test
         run: npm test
 
-  deploy:
+  build:
     needs: test
     runs-on: ubuntu-latest
     steps:
-      - name: Get Code
-        uses: actions/checkout@v3
-      - name: Install NodeJS
-        uses: actions/setup-node@v3
+      - name: build artifact
+        run: npm run build
+      - name: upload artifact
+        uses: actions/upload-artifact@v3
         with:
-          node-version: 18
+            name: artifact
+            path: public
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: download artifact
+        uses: actions/download-artifact@v3
+        with:
+            name: artifact
+      - name: Output Content
+        run: ls -lah
       - name: Deploy the app
         run: echo "App is being deployed..."
